neutron (2:7.0.0~rc2-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release candidate for OpenStack Liberty.
  * d/p/fix-neutron-configuration.patch: Rebased.
  * d/p/skip-iptest.patch: Rebased.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 08 Oct 2015 09:42:36 -0400

neutron (2:7.0.0~rc1-0ubuntu5) wily; urgency=medium

  * d/neutron-common.install: Install ebtables filters (LP: #1502363).
  * d/neutron-plugin-openvswitch-agent.{init.in,upstart.in}: Add agent
    specific configuration file to daemon arguments (LP: #1502364).
  * d/neutron-plugin-linuxbridge-agent.init.in: Add agent specific
    configuration file to daemon arguments (LP: #1502362).
  * d/control: Add dependency on ebtables for linuxbridge agent
    (LP: #1502362).
  * d/control,neutron-plugin-sriov-agent.init.in: Add missing dependency
    from sriov-agent -> neutron-plugin-ml2, add agent specific
    configuration file to daemon arguments.

 -- James Page <james.page@ubuntu.com>  Mon, 05 Oct 2015 08:54:20 +0100

neutron (2:7.0.0~rc1-0ubuntu4) wily; urgency=medium

  * Drop hard requirement on python-ryu for this cycle as it supports
    a new alternative agent implementation for Open vSwitch and is not
    the default, avoiding inclusion of ryu in main for Wily.
    - d/control: Drop (Build-)Depends on ryu, add Suggests.
    - d/p/drop-ryu-dep.patch: Patch out hard requirement on ryu.

 -- James Page <james.page@ubuntu.com>  Fri, 02 Oct 2015 18:10:49 +0100

neutron (2:7.0.0~rc1-0ubuntu3) wily; urgency=medium

  * d/p/binary-metadata.patch: Cherry pick fix from upstream to resolve
    errors when accessing binary encoded metadata (LP: #1501772).

 -- James Page <james.page@ubuntu.com>  Fri, 02 Oct 2015 10:54:24 +0100

neutron (2:7.0.0~rc1-0ubuntu2) wily; urgency=medium

  * d/p/i386-fwmark.patch: Ensure int and long types are converted
    to strings consistently across all architectures, avoiding 'L'
    suffix generated by hex function for long type (LP: #1501703).
